# time-until-cli

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-development.txt  requirements-lock.txt  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
assets/: time_until_app.drawio
src/: __main__.py  time_until.py
tests/: date_builder.py  test_time_until.py
